Update Second - Add Testimonials - Contact - Copyright

--- a/index.html
+++ b/index.html
@@ -118,10 +118,9 @@
         </div>
     </section>
 
-    <!--My Portfolio-->
+    <!--Portfolio-->
     <section class="portfolio container">
         <div class="rectangle"></div>
-
         <div class="title">
             <h3>PORTFOLIO</h3>
             <div class="cta-title">
@@ -182,9 +181,95 @@
                     </a>
                 </div>
             </div>
-
         </div>
+    </section>
 
+    <!--Testimonials-->
+    <section class="testimonials">
+        <div class="container">
+            <div class="title">
+                <h3>craft amazing</h3>
+                <h1>Customer Testimonials</h1>
+            </div>
+            <div class="grid-wrapper">
+                <div class="grid-box">
+                    <img src="img/customer1.png" alt="customer1.png">
+                    <i class="fa fa-quote-left" aria-hidden="true"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ad sequi laudantium porro
+                        facilis
+                        quas?</p>
+                    <h4>John Doe</h4>
+                    <p>Marketing Manager</p>
+                    <div class="rating">
+                        <i class="fa fa-star rating-blue" aria-hidden="true"></i>
+                        <i class="fa fa-star rating-blue" aria-hidden="true"></i>
+                        <i class="fa fa-star rating-blue" aria-hidden="true"></i>
+                        <i class="fa fa-star rating-blue" aria-hidden="true"></i>
+                        <i class="fa fa-star rating-blue" aria-hidden="true"></i>
+                    </div>
+                </div>
+
+                <div class="grid-box">
+                    <img src="img/customer2.png" alt="customer2.png">
+                    <i class="fa fa-quote-left" aria-hidden="true"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ad sequi laudantium porro
+                        facilis
+                        quas?</p>
+                    <h4>John Doe</h4>
+                    <p>Marketing Manager</p>
+                    <div class="rating">
+                        <i class="fa fa-star rating-blue" aria-hidden="true"></i>
+                        <i class="fa fa-star rating-blue" aria-hidden="true"></i>
+                        <i class="fa fa-star rating-blue" aria-hidden="true"></i>
+                        <i class="fa fa-star rating-blue" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                </div>
+
+                <div class="grid-box">
+                    <img src="img/customer3.png" alt="customer3.png">
+                    <i class="fa fa-quote-left" aria-hidden="true"></i>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi ad sequi laudantium porro
+                        facilis
+                        quas?</p>
+                    <h4>John Doe</h4>
+                    <p>Marketing Manager</p>
+                    <div class="rating">
+                        <i class="fa fa-star rating-blue" aria-hidden="true"></i>
+                        <i class="fa fa-star rating-blue" aria-hidden="true"></i>
+                        <i class="fa fa-star rating-blue" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Contact-->
+    <section class="contact">
+        <div class="container">
+            <h3>contact me</h3>
+            <h1>Got A Project! Let's Talk</h1>
+            <i class="fa fa-envelope-o" aria-hidden="true"></i>
+            <span class="email-contact">thanhle36668@gmail.com</span>
+            <div class="links">
+                <div class="logo">
+                    <img src="img/logo.png" alt="logo.png">
+                </div>
+                <ul>
+                    <li>Home</li>
+                    <li>Skills</li>
+                    <li>Services</li>
+                    <li>About</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!--Copyright-->
+    <section class="copyright container">
+        <h3>Copyright................</h3>
     </section>
 </body>
 
